--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .center {
+            text-align: center;
+            width: 100%;
+        }
+    </style>
 </head>
 
 <body>
@@ -17,11 +23,11 @@
         const vm = Vue.createApp({
             data() {
                 return {
-                    message: 'Hello Vue!',
-                    textHTML: '<p>This is <strong>bold</strong></p>'
+                    imgSrc: "https://images.unsplash.com/photo-1587620962725-abab7fe55159?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=80",
+                    imgAlt: "Laptop with code and plant in coffee shop",
                 }
             },
-            template: `<div v-text="message"></div><div v-html="textHTML"></div>`
+            template: `<div class="center"><img v-bind:src="imgSrc" v-bind:alt="imgAlt"></div>`
         }).mount('#app');
 
         console.log(vm);
