--- a/index.html
+++ b/index.html
@@ -6,19 +6,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anek+Odia:wght@200&display=swap" rel="stylesheet">  
+    <style>
+        body, button {
+            font-family: 'Anek Odia', sans-serif;
+            font-size: 20px;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            text-align: center;
+            height: 100vh;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+        }
+        .container > div {
+            flex: auto;
+            padding: 40vh 0;
+        }
+        .open {
+            background-color: #c1fdc1;
+        }
+        .closed {
+            background-color: #ffc1c1;
+        }
+    </style>
 </head>
 
 <body>
     <script src="https://unpkg.com/vue@3"></script>
 
-    <div id="app"></div>
+    <div id="app" class="container"></div>
 
     <script>
         const vm = Vue.createApp({
             data() {
                 return {
                     text: "Hello Vue!",
-                    open: false
+                    open: false,
+                    styleButton: {
+                        backgroundColor: "#e5e5e5",
+                        padding: "12px",
+                        border: "none",
+                        borderRadius: "6px"
+                    }
                 }
             },
             watch: {
@@ -26,21 +60,26 @@
                     console.log("Watcher!" , value, old)
                 },
                 open(value) {
-                    if(value)
+                    if(value){
                         this.text = "Door open"
-                    else
+                    } else{
                         this.text = "Door closed"
+                    }
+                        
                 }
             },
             computed: {
                 label() {
                     return this.open? "Close": "Open"
+                },
+                styles() {
+                    return this.open ?  ['open'] : ['closed']
                 }
             },
             template: `
-                <div>
+                <div :class="styles">
                     <p>{{ text }}</p>
-                    <p><button @click="open = !open">{{ label }}</button></p>
+                    <p><button @click="open = !open"  :style="styleButton">{{ label }}</button></p>
                 </div>`
         }).mount('#app');
 
