--- a/index.html
+++ b/index.html
@@ -33,12 +33,17 @@
         .closed {
             background-color: #ffc1c1;
         }
+        .item {
+            border-bottom: 1px solid #628662;
+            text-align: left;
+            padding: 0 10px;
+        }
     </style>
 </head>
 
 <body>
     <script src="https://unpkg.com/vue@3"></script>
-
+    
     <div id="app" class="container"></div>
 
     <script>
@@ -53,7 +58,20 @@
                         border: "none",
                         borderRadius: "6px"
                     },
-                    username: ""
+                    username: "",
+                    posts: [{
+                        title: "Titulo 1",
+                        description: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora autem, est inventore rem sit non commodi, tempore unde saepe architecto iure corporis nihil ducimus illum doloremque tenetur pariatur iusto voluptatum?"
+                    }, {
+                        title: "Titulo 2",
+                        description: "Lorem ipsum..."
+                    }, {
+                        title: "Titulo 3",
+                        description: "Lorem ipsum..."
+                    }, {
+                        title: "Titulo 4",
+                        description: "Lorem ipsum..."
+                    }]
                 }
             },
             watch: {
@@ -83,6 +101,14 @@
                     <p>{{ text }}</p>
                     <div v-if="open">
                         <p>Hello {{ username }}</p>
+                        <div>
+                            <article v-for="(item, i) in posts" :key="i" class="item">
+                                <header><h2>{{ item.title }}</h2></header>
+                                <section>
+                                    <p>{{ item.description }}</p>
+                                </section>
+                            </article>
+                        </div>
                     </div>
                     <div v-else>
                         <form>
