--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <v-item
                         v-for="(item, i) in items"
                         v-bind:text="item"
-                        v-on:click="remove(i)"
+                        v-on:remove="remove(i)"
                     ></v-item>
                 </ul>
             `
@@ -73,7 +73,12 @@
             props: {
                 text: String,
             },
-            template: `<li>{{ text }}</li>`
+            methods: {
+                rm() {
+                    this.$emit("remove");
+                }
+            },
+            template: `<li v-on:click="rm">{{ text }}</li>`
         })
         
         const vm = app.mount('#app');
